--- a/index.html
+++ b/index.html
@@ -2,14 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <svg
-      version="1.0"
-      xmlns="http://www.w3.org/2000/svg"
-      width="254.000000pt"
-      height="255.000000pt"
-      viewBox="0 0 254.000000 255.000000"
-      preserveAspectRatio="xMidYMid meet"
-    ></svg>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Indominiso</title>
   </head>
