--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Indominiso" />
+    <meta
+      property="og:description"
+      content="Transforming your vision into reality."
+    />
+    <meta property="og:image" content="https://i.ibb.co/G05gLVD/image.png" />
+    <meta property="og:url" content="https://www.indominiso.com" />
     <title>Indominiso</title>
   </head>
   <body className="bg-black">
